<resources>
    <string name="app_name">roomlivedatajava</string>

    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>

</resources>
