<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/edit_word"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:hint="@string/hint_word"
        android:inputType="textAutoComplete" />

    <Button
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:id="@+id/button_save"
        android:text="@string/button_save" />
</LinearLayout>